<resources>
    <!--App-->
    <string name="app_name">Sandbox Demo</string>
    <string name="by">by</string>
    <string name="author_name">Keegan Liew</string>
    <string name="author_email">keeganliew@hotmail.com</string>
    <!--Splash screen-->
    <string name="app_logo">App Logo</string>
    <string name="welcome">Welcome</string>
    <!--Logins-->
    <string name="guest">Guest</string>
    <string name="username">Username</string>
    <string name="pin">PIN</string>
    <string name="password">Password</string>
    <string name="login">Login</string>
    <string name="show_gesture">Show Gesture</string>
    <!--Login Navigation Drawer-->
    <string name="profiles">Profiles</string>
    <string name="forgot_pin">Forgot Pin</string>
    <string name="auth_option">Auth. Option</string>
    <string name="help">Help</string>
    <string name="scroll_error">Scrolling only works for Lollipop or above</string>
    <string name="display_picture">Display Picture</string>
    <!--Home Navigation Drawer-->
    <string name="home">Home</string>
    <string name="sms_service">Sms Service</string>
    <string name="device_info">Device Info</string>
    <string name="development_log">Development Log</string>
    <string name="login_time">"Logged in at "</string>
    <string name="contact">Contact</string>
    <string name="about">About</string>
    <string name="feedback">Feedback</string>
    <string name="log_out">Log out</string>
    <!--Home-->
    <string name="change_username_or_password">Change username/password</string>
    <string name="intro_text">Lorizzle ipsizzle dolor sit amet, shiznit the bizzle sizzle. sapizzle velizzle, shizznit volutpizzle, da bomb pimpin’, fizzle vizzle, arcu. Ass eget tortizzle. Gizzle eros. Boom shackalack izzle dolor dapibizzle turpis tempizzle fo shizzle mah nizzle fo rizzle, mah home g-dizzle. Maurizzle mah nizzle nibh et turpizzle. Yippiyo izzle tortizzle. Gizzle rhoncizzle dang.</string>
    <!--Settings-->
    <string name="settings">Settings</string>
    <string name="save_all">Save all</string>
    <string name="edit_text">Edit text</string>
    <string name="save_change">Save change</string>
    <string name="revert_change">Revert change</string>
    <string name="original_image">Original image</string>
    <string name="new_image">New image</string>
    <string name="background_image">Background Image</string>
    <!--Sms Fragment-->
    <string name="select_message_type">Select Message Type</string>
    <string name="message_type_sms">SMS Message</string>
    <string name="message_type_mms">MMS Message</string>
    <string name="hint_phone_number_or_contact"><i>Phone Number or Contact</i></string>
    <string name="hint_message_sms"><i>Enter Message</i></string>
    <string name="hint_message_mms"><i>MMS Coming Soon</i></string>
    <string name="message_to">"Message to "</string>
    <string name="message_limit_error">"Please enter less than 160 characters"</string>
    <string name="sms_switch">Toggle SMS toast</string>
    <!--General Fragment-->
    <string name="button_submit">Submit</string>
    <string name="button_send">Send</string>
    <string name="button_cancel">Cancel</string>
    <string name="button_ok">OK</string>
    <string name="button_pin">Pin</string>
    <string name="button_password">Password</string>
    <string name="button_gesture">Gesture</string>
    <!--Custom Numpad-->
    <string name="number_one">1</string>
    <string name="number_two">2</string>
    <string name="number_three">3</string>
    <string name="number_four">4</string>
    <string name="number_five">5</string>
    <string name="number_six">6</string>
    <string name="number_seven">7</string>
    <string name="number_eight">8</string>
    <string name="number_nine">9</string>
    <string name="number_zero">0</string>
    <string name="numpad_menu">Menu</string>
    <string name="numpad_backspace">Del</string>
    <string name="about_description_app">"This is a small sample which can be set in the about my app description file."</string>
    <string name="about_description_extra_info">"You can style this with html markup :D"</string>
    <!--Others-->
    <string name="hello_world">Hello world!</string>
    <string name="refresh">refresh</string>
    <!--Pop up dialog-->
    <string name="loading">Loading…</string>
    <string name="login_pin_incorrect">Your PIN is incorrect. Please try again.</string>
    <string name="login_gesture_incorrect">Your gesture is incorrect. Please try again.</string>
    <string name="login_password_incorrect">Your password is incorrect. Please try again.</string>
    <string name="login_login_in">Logging in…</string>
    <string name="authentication_option">Authentication Options</string>
    <string name="show_auth_option">Show auth. options</string>
    <string name="add_profile">Add profile</string>
    <string name="clear_profiles">Clear profiles</string>
    <string name="profile_sync">Sync profiles online</string>
    <string name="label_pin">"PIN: "</string>
    <string name="label_password">"Password: "</string>
    <string name="label_gesture">"Gesture: "</string>
    <string name="label_default_credentials">Default credentials</string>
    <string name="default_gesture_image">Default gesture image</string>
    <string name="desc_contact_imagebutton_linkedin">LinkedIn Profile</string>
    <string name="desc_contact_imagebutton_google_play">Google Play App</string>
    <string name="desc_contact_imagebutton_github">GitHub profile</string>
    <string name="close_dialog">Close dialog</string>
    <!--Mandatory fields-->
    <string name="phone_number_is_mandatory">Phone number is mandatory</string>
    <string name="message_is_mandatory">Message is mandatory</string>
    <!--Toast message-->
    <string name="toast_error_message_crop_support">Your device doesn\'t support the crop action!</string>
    <string name="toast_press_again_to_exit">Press again to exit</string>
    <string name="toast_enter_a_character">Please enter a character</string>
    <string name="toast_enter_more_than_one_character">Please enter more than one character</string>
    <string name="toast_no_phone_number_found_for_contact">No phone number found for Contact</string>
    <string name="toast_failed_to_get_contact_data">Failed to get Contact data</string>
    <string name="toast_not_sending_full_message">Not sending full message</string>
    <string name="toast_sms_sent_success">SMS sent</string>
    <string name="toast_sms_sent_fail">SMS failed, please try again</string>
    <!--For debugging xml views-->
    <string name="debug_text">TextHolder123</string>
</resources>
