<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android">

    <group android:checkableBehavior="all">
        <item
            android:id="@+id/nav_drawer_home"
            android:icon="@drawable/ic_home_white_48dp"
            android:title="@string/home" />
        <item
            android:id="@+id/nav_drawer_sms_service"
            android:icon="@drawable/ic_textsms_white_48dp"
            android:title="@string/sms_service" />
        <item
            android:id="@+id/nav_drawer_device_info"
            android:icon="@drawable/ic_perm_device_information_white_48dp"
            android:title="@string/device_info" />
        <item
            android:id="@+id/nav_drawer_development"
            android:icon="@drawable/ic_format_list_bulleted_white_48dp"
            android:title="@string/development_log" />
        <item
            android:id="@+id/nav_drawer_contact"
            android:icon="@drawable/ic_plus_box_white_48dp"
            android:title="@string/contact" />
        <item
            android:id="@+id/nav_drawer_feedback"
            android:icon="@drawable/ic_feedback_white_48dp"
            android:title="@string/feedback" />
    </group>

    <group
        android:id="@+id/nav_footer"
        android:checkableBehavior="all">
        <item
            android:id="@+id/nav_drawer_about"
            android:icon="@drawable/ic_info_white_48dp"
            android:title="@string/about" />
        <item
            android:id="@+id/nav_drawer_settings"
            android:icon="@drawable/ic_settings_white_48dp"
            android:title="@string/settings" />
        <item
            android:id="@+id/nav_drawer_log_out"
            android:icon="@drawable/ic_power_white_48dp"
            android:title="@string/log_out" />
    </group>
</menu>
