<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/eighty_percent_black">

    <LinearLayout
        android:layout_width="@dimen/dialog_auth_option_width"
        android:layout_height="wrap_content"
        android:layout_centerHorizontal="true"
        android:layout_centerVertical="true"
        android:background="@color/grey"
        android:orientation="vertical">

        <RelativeLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginBottom="15dp"
            android:layout_marginLeft="@dimen/pop_up_dialog_padding_left_right"
            android:layout_marginRight="@dimen/pop_up_dialog_padding_left_right"
            android:layout_marginTop="15dp">

            <TextView
                android:id="@+id/Dialog_Login_Contact_TextView_Contact"
                android:layout_width="fill_parent"
                android:layout_height="wrap_content"
                android:text="@string/contact"
                android:textSize="@dimen/standard_text_size" />

            <ImageView
                android:id="@+id/Dialog_Login_Contact_ImageView_Close"
                android:layout_width="@dimen/dialog_title_icon_size"
                android:layout_height="@dimen/dialog_title_icon_size"
                android:layout_alignParentEnd="true"
                android:layout_alignParentRight="true"
                android:layout_centerVertical="true"
                android:contentDescription="@string/close_dialog"
                android:src="@drawable/ic_close_white_48dp" />
        </RelativeLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginBottom="@dimen/margin_between_elements"
            android:layout_marginLeft="@dimen/pop_up_dialog_padding_left_right"
            android:layout_marginRight="@dimen/pop_up_dialog_padding_left_right"
            android:gravity="center"
            android:orientation="horizontal">

            <ImageButton
                android:layout_width="@dimen/login_contact_imagebutton_size"
                android:layout_height="@dimen/login_contact_imagebutton_size"
                android:contentDescription="@string/desc_contact_imagebutton_linkedin"
                android:src="@drawable/wallpaper1" />

            <ImageButton
                android:layout_width="@dimen/login_contact_imagebutton_size"
                android:layout_height="@dimen/login_contact_imagebutton_size"
                android:layout_marginLeft="5dp"
                android:layout_marginRight="5dp"
                android:contentDescription="@string/desc_contact_imagebutton_google_play"
                android:src="@drawable/wallpaper2" />

            <ImageButton
                android:layout_width="@dimen/login_contact_imagebutton_size"
                android:layout_height="@dimen/login_contact_imagebutton_size"
                android:contentDescription="@string/desc_contact_imagebutton_github"
                android:src="@drawable/wallpaper3" />

        </LinearLayout>

        <LinearLayout
            android:id="@+id/Dialog_Login_Contact_RelativeLayout_MyInfo"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginBottom="5dp"
            android:layout_marginLeft="@dimen/pop_up_dialog_padding_left_right"
            android:layout_marginRight="@dimen/pop_up_dialog_padding_left_right"
            android:gravity="center"
            android:orientation="vertical">

            <TextView
                android:id="@+id/Dialog_Login_Contact_TextView_AppName"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/app_name" />

            <TextView
                android:id="@+id/Dialog_Login_Contact_TextView_By"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/by"
                android:textSize="@dimen/smaller_text_size" />

            <TextView
                android:id="@+id/Dialog_Login_Contact_TextView_Authorname"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/author_name" />

            <TextView
                android:id="@+id/Dialog_Login_Contact_TextView_AuthorEmail"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/author_email" />
        </LinearLayout>

    </LinearLayout>
</RelativeLayout>