<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/eighty_percent_black">

    <LinearLayout
        android:layout_width="@dimen/dialog_auth_option_width"
        android:layout_height="wrap_content"
        android:layout_centerHorizontal="true"
        android:layout_centerVertical="true"
        android:background="@color/grey"
        android:orientation="vertical">

        <RelativeLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginBottom="5dp"
            android:layout_marginLeft="@dimen/pop_up_dialog_padding_left_right"
            android:layout_marginRight="@dimen/pop_up_dialog_padding_left_right"
            android:layout_marginTop="15dp">

            <TextView
                android:id="@+id/Dialog_Login_AuthOption_TextView_AuthOption"
                android:layout_width="fill_parent"
                android:layout_height="wrap_content"
                android:text="@string/authentication_option"
                android:textSize="@dimen/standard_text_size" />

            <ImageView
                android:id="@+id/Dialog_Login_AuthOption_ImageView_Close"
                android:layout_width="@dimen/dialog_title_icon_size"
                android:layout_height="@dimen/dialog_title_icon_size"
                android:layout_alignParentEnd="true"
                android:layout_alignParentRight="true"
                android:layout_centerVertical="true"
                android:contentDescription="@string/close_dialog"
                android:src="@drawable/ic_close_white_48dp" />
        </RelativeLayout>

        <TextView
            android:layout_width="match_parent"
            android:layout_height="0.5dp"
            android:layout_marginBottom="5dp"
            android:background="@color/pure_white" />

        <RadioGroup
            android:id="@+id/RadioGroup_AuthOption"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginLeft="@dimen/pop_up_dialog_padding_left_right"
            android:layout_marginRight="@dimen/pop_up_dialog_padding_left_right">

            <RadioButton
                android:id="@+id/RadioButton_Pin"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/button_pin" />

            <RadioButton
                android:id="@+id/RadioButton_Password"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/button_password" />

            <RadioButton
                android:id="@+id/RadioButton_Gesture"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/button_gesture" />
        </RadioGroup>

        <CheckBox
            android:id="@+id/CheckBox_AuthOption"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginLeft="@dimen/pop_up_dialog_padding_left_right"
            android:layout_marginRight="@dimen/pop_up_dialog_padding_left_right"
            android:layout_marginTop="@dimen/margin_between_elements"
            android:text="@string/show_auth_option"
            android:textSize="@dimen/smaller_text_size" />

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginLeft="@dimen/pop_up_dialog_padding_left_right"
            android:layout_marginRight="@dimen/pop_up_dialog_padding_left_right"
            android:background="@color/grey"
            android:orientation="horizontal">

            <Button
                android:id="@+id/Dialog_Button_Ok"
                style="?android:attr/buttonBarButtonStyle"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="start"
                android:text="@string/button_ok" />

            <Button
                android:id="@+id/Dialog_Button_Cancel"
                style="?android:attr/buttonBarButtonStyle"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="end"
                android:text="@string/button_cancel" />

        </LinearLayout>

    </LinearLayout>
</RelativeLayout>