<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/eighty_percent_black">

    <LinearLayout
        android:layout_width="@dimen/dialog_auth_option_width"
        android:layout_height="wrap_content"
        android:layout_centerHorizontal="true"
        android:layout_centerVertical="true"
        android:background="@color/grey"
        android:orientation="vertical"
        android:paddingLeft="@dimen/pop_up_dialog_padding_left_right"
        android:paddingRight="@dimen/pop_up_dialog_padding_left_right">

        <TextView
            android:id="@+id/Dialog_TextView_Label"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="@dimen/edit_text_padding_left_right"
            android:indeterminateDrawable="@drawable/progress_style"
            android:text="@string/select_auth_option" />

        <RadioGroup
            android:id="@+id/RadioGroup_AuthOption"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="@dimen/margin_between_elements">

            <RadioButton
                android:id="@+id/RadioButton_Pin"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:checked="true"
                android:text="@string/button_pin" />

            <RadioButton
                android:id="@+id/RadioButton_Password"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/button_password" />

            <RadioButton
                android:id="@+id/RadioButton_Gesture"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/button_gesture" />
        </RadioGroup>

        <CheckBox
            android:id="@+id/CheckBox_AuthOption"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="@dimen/margin_between_elements"
            android:checked="true"
            android:text="@string/show_auth_option"
            android:textSize="@dimen/smaller_text_size" />

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:background="@color/grey"
            android:orientation="horizontal">

            <Button
                android:id="@+id/Dialog_Button_Ok"
                style="?android:attr/buttonBarButtonStyle"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="start"
                android:text="@string/button_ok" />

            <Button
                android:id="@+id/Dialog_Button_Cancel"
                style="?android:attr/buttonBarButtonStyle"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="end"
                android:text="@string/button_cancel" />

        </LinearLayout>

    </LinearLayout>
</RelativeLayout>