<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="horizontal">

    <Button
        android:id="@+id/InputOption_Button_Pin"
        android:layout_width="0dp"
        android:layout_height="@dimen/fragment_button_height"
        android:layout_marginEnd="5dp"
        android:layout_marginRight="5dp"
        android:layout_marginTop="@dimen/margin_between_elements"
        android:layout_weight="1"
        android:background="@drawable/button_selector"
        android:text="@string/button_pin" />

    <Button
        android:id="@+id/InputOption_Button_Password"
        android:layout_width="0dp"
        android:layout_height="@dimen/fragment_button_height"
        android:layout_marginEnd="5dp"
        android:layout_marginRight="5dp"
        android:layout_marginTop="@dimen/margin_between_elements"
        android:layout_weight="1"
        android:background="@drawable/button_selector"
        android:text="@string/button_password" />

    <Button
        android:id="@+id/InputOption_Button_Gesture"
        android:layout_width="0dp"
        android:layout_height="@dimen/fragment_button_height"
        android:layout_marginEnd="5dp"
        android:layout_marginRight="5dp"
        android:layout_marginTop="@dimen/margin_between_elements"
        android:layout_weight="1"
        android:background="@drawable/button_selector"
        android:text="@string/button_gesture" />
</LinearLayout>