<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:orientation="vertical">

    <TextView
        android:id="@+id/Editor_TextView_Label"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="center_vertical"
        android:text="@string/debug_text" />

    <LinearLayout
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="top"
        android:orientation="horizontal">

        <ImageView
            android:id="@+id/Editor_ImageView_Original"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:adjustViewBounds="true"
            android:contentDescription="@string/original_image"
            android:scaleType="fitStart"
            android:src="@drawable/wallpaper2"
            android:visibility="visible" />

        <ImageView
            android:id="@+id/Editor_ImageView_New"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:contentDescription="@string/new_image"
            android:scaleType="fitStart"
            android:src="@drawable/wallpaper1"
            android:visibility="gone" />

        <LinearLayout
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="top"
            android:orientation="vertical">

            <ImageView
                android:id="@+id/Editor_ImageView_Change"
                android:layout_width="@dimen/editor_icon_size"
                android:layout_height="@dimen/editor_icon_size"
                android:layout_marginTop="2dp"
                android:background="@drawable/ic_border_color_white_48dp"
                android:contentDescription="@string/edit_text"
                android:visibility="visible" />

            <ImageView
                android:id="@+id/Editor_ImageView_Delete"
                android:layout_width="@dimen/editor_icon_size"
                android:layout_height="@dimen/editor_icon_size"
                android:background="@drawable/ic_delete_forever_white_48dp"
                android:contentDescription="@string/edit_text"
                android:visibility="visible" />

            <ImageView
                android:id="@+id/Editor_ImageView_Save"
                android:layout_width="@dimen/editor_icon_size"
                android:layout_height="@dimen/editor_icon_size"
                android:background="@drawable/ic_check_circle_outline_white_48dp"
                android:contentDescription="@string/save_change"
                android:visibility="gone" />

            <ImageView
                android:id="@+id/Editor_ImageView_Revert"
                android:layout_width="@dimen/editor_icon_size"
                android:layout_height="@dimen/editor_icon_size"
                android:background="@drawable/ic_close_circle_outline_white_48dp"
                android:contentDescription="@string/save_change"
                android:visibility="gone" />

        </LinearLayout>
    </LinearLayout>
</LinearLayout>